syntax = "proto3";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";

option go_package = "JamJam/grapevine";

service ScoreBoardManager {
    rpc PostNewScore(UserScore) returns (google.protobuf.Empty) {
        //option (google.api.http) = {
        //    post: "/api/v1/PostScore"
        //    body: "*"
        //};
    };
    rpc GetTopThreeUserScores(google.protobuf.Empty) returns (TopScores) {
        //option (google.api.http) = {
        //    post: "/api/v1/GetScores"
        //    body: "*"
        //};
    };
}

message UserScore {
    string userId = 1;
    int64 score = 2;
}

message TopScores {
    repeated UserScore scores = 1;
}